--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/index/timer"
+    "pages/index/timer",
+    "pages/index/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
