--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,10 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/index/timer"
+    "pages/timer/index",
+    "pages/timer/timer",
+    "pages/more/index",
+    "pages/more/howto",
+    "pages/more/records"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -9,6 +12,20 @@
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "Timer",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/timer/index",
+        "iconPath": "./images/tab-timer.png",
+        "selectedIconPath": "./images/tab-timer-selected.png"
+      },
+      {
+        "pagePath": "pages/more/index",
+        "iconPath": "./images/tab-more.png",
+        "selectedIconPath": "./images/tab-more-selected.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2"
